# LangChain-Pinecone-io-thing

./: 00-langchain-intro.ipynb  01-langchain-prompt-templates.ipynb  02-langchain-chains.ipynb  03-langchain-conversational-memory.ipynb  03a-token-counter.ipynb  04-langchain-chat.ipynb  README.md  pyproject.toml
