[project]
name = "LangChain-Pinecone-io-thing"
version = "0.1.0"
description = "This project demonstrates LangChain building blocks and integration with Pinecone.io for vector storage and retrieval for RAG applications."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "pydantic>=2.9.0",
    "pinecone>=5.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
    "tqdm>=4.66.1",
    "weaviate-client>=4.15.0",
    "langchain-pinecone>=0.1.0",
]
[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.12.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.22.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.6",
    "mkdocstrings>=0.19.0",
    "pydoc-markdown>=4.0.0",
]
examples = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipycanvas>=0.12.1",
]

